[gd_scene load_steps=19 format=3 uid="uid://cjwreoa55edjc"]

[ext_resource type="PackedScene" uid="uid://bhg0v06b3w6vj" path="res://ui/bluebtn.tscn" id="1_fplw4"]
[ext_resource type="Script" path="res://ui.gd" id="1_gks5u"]
[ext_resource type="Texture2D" uid="uid://cvgvvwekyu03i" path="res://ui/texture/barn-svgrepo-com.svg" id="2_5fice"]
[ext_resource type="Texture2D" uid="uid://c8a6tewk88o1" path="res://ui/texture/panel_beige.png" id="3_csto8"]
[ext_resource type="Texture2D" uid="uid://q24tayvqrnbs" path="res://ui/texture/grab-svgrepo-com.svg" id="4_3xfr6"]
[ext_resource type="Texture2D" uid="uid://dt3wi38hxlrqo" path="res://ui/texture/bean-svgrepo-com.svg" id="5_xs6m0"]
[ext_resource type="ButtonGroup" uid="uid://nxniu2ccg34k" path="res://ui/button_group.tres" id="5_ytvxn"]
[ext_resource type="Texture2D" uid="uid://d4cvpktagfan6" path="res://ui/texture/scissors-svgrepo-com.svg" id="6_dlohc"]
[ext_resource type="Texture2D" uid="uid://dpey2dtlgmymw" path="res://ui/texture/dollar-1189-svgrepo-com.svg" id="7_1uj8v"]

[sub_resource type="InputEventKey" id="InputEventKey_8suqd"]
device = -1
keycode = 72
unicode = 104

[sub_resource type="Shortcut" id="Shortcut_c7ae5"]
events = [SubResource("InputEventKey_8suqd")]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ki2in"]
texture = ExtResource("3_csto8")
texture_margin_left = 7.0
texture_margin_top = 7.0
texture_margin_right = 7.0
texture_margin_bottom = 7.0

[sub_resource type="InputEventKey" id="InputEventKey_pb4r7"]
device = -1
keycode = 90
unicode = 122

[sub_resource type="Shortcut" id="Shortcut_4coes"]
events = [SubResource("InputEventKey_pb4r7")]

[sub_resource type="InputEventKey" id="InputEventKey_6anyi"]
device = -1
keycode = 88
unicode = 120

[sub_resource type="Shortcut" id="Shortcut_s6j4b"]
events = [SubResource("InputEventKey_6anyi")]

[sub_resource type="InputEventKey" id="InputEventKey_7h42s"]
device = -1
keycode = 67
unicode = 99

[sub_resource type="Shortcut" id="Shortcut_esue0"]
events = [SubResource("InputEventKey_7h42s")]

[node name="UI" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 22
script = ExtResource("1_gks5u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="homebtn" parent="." instance=ExtResource("1_fplw4")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
shortcut = SubResource("Shortcut_c7ae5")

[node name="Barn-svgrepo-com" type="Sprite2D" parent="homebtn"]
position = Vector2(23, 22)
scale = Vector2(0.06, 0.06)
texture = ExtResource("2_5fice")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxTexture_ki2in")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="dragbtn" parent="PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource("1_fplw4")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
toggle_mode = true
button_pressed = true
button_group = ExtResource("5_ytvxn")
shortcut = SubResource("Shortcut_4coes")

[node name="Barn-svgrepo-com" type="Sprite2D" parent="PanelContainer/MarginContainer/HBoxContainer/dragbtn"]
position = Vector2(23, 22)
scale = Vector2(0.04625, 0.04625)
texture = ExtResource("4_3xfr6")

[node name="plantbtn" parent="PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource("1_fplw4")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
toggle_mode = true
button_group = ExtResource("5_ytvxn")
shortcut = SubResource("Shortcut_s6j4b")

[node name="bean" type="Sprite2D" parent="PanelContainer/MarginContainer/HBoxContainer/plantbtn"]
position = Vector2(22, 23)
rotation = 0.785397
scale = Vector2(0.0385603, 0.0385603)
texture = ExtResource("5_xs6m0")

[node name="cutbtn" parent="PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource("1_fplw4")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
toggle_mode = true
button_group = ExtResource("5_ytvxn")
shortcut = SubResource("Shortcut_esue0")

[node name="Barn-svgrepo-com" type="Sprite2D" parent="PanelContainer/MarginContainer/HBoxContainer/cutbtn"]
position = Vector2(23, 23)
rotation = 1.57079
scale = Vector2(0.031875, 0.031875)
texture = ExtResource("6_dlohc")

[node name="sellbtn" parent="PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource("1_fplw4")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Barn-svgrepo-com" type="Sprite2D" parent="PanelContainer/MarginContainer/HBoxContainer/sellbtn"]
position = Vector2(23, 22)
scale = Vector2(0.03625, 0.03625)
texture = ExtResource("7_1uj8v")

[connection signal="pressed" from="homebtn" to="." method="_on_homebtn_pressed"]
[connection signal="toggled" from="PanelContainer/MarginContainer/HBoxContainer/dragbtn" to="." method="_on_dragbtn_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/HBoxContainer/plantbtn" to="." method="_on_plantbtn_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/HBoxContainer/cutbtn" to="." method="_on_cutbtn_toggled"]
